# fastapi-init

./: .goreleaser.yml  README.md  go.mod  main.go
.github/workflows/: release.yml
generator/: generator.go
generator/templates/: .env.tmpl  Dockerfile.tmpl  Pipfile.tmpl  docker-compose.yml.tmpl  main.py.tmpl  requirements.txt.tmpl
generator/templates/app/api/v1/routers/: items.py.tmpl  users.py.tmpl
generator/templates/app/core/: cache.py.tmpl  config.py.tmpl  security.py.tmpl
pypi/: README.md  pyproject.toml
pypi/fastapi_init/: __init__.py  _binary.py
tui/: tui.go
