[build-system]
requires = ["setuptools>=68", "setuptools-scm"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fastapi-init"
dynamic = ["version"]
description = "Scaffold a production-ready FastAPI project in seconds"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["fastapi", "scaffold", "generator", "cli", "boilerplate"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Code Generators",
]

[project.scripts]
fastapi-init = "fastapi_init:main"

[project.urls]
Homepage = "https://github.com/markryangarcia/fastapi-init"
Repository = "https://github.com/markryangarcia/fastapi-init"

[tool.setuptools.packages.find]
where = ["."]
include = ["fastapi_init*"]

[tool.setuptools.dynamic]
version = { attr = "fastapi_init.__version__" }
